# FSpring

./: README.md
FSpring(ubuntu)/: CMakeLists.txt  clean.pl  compile.pl  main.cpp
FSpring(windows)/: FSpring.sln  README.md  clean.bat
FSpring(windows)/FSpring/: FSpring.cpp  FSpring.h  FSpring.rc  FSpring.vcxproj  FSpring.vcxproj.filters  FrameExtractor.cpp  FrameExtractor.h  ImageListView.cpp  ImageListView.h  MainFrm.cpp  MainFrm.h  Setting.txt  VideoListView.cpp  VideoListView.h  VideoWriter.cpp  VideoWriter.h  repository.h  resource.h  stdafx.cpp  version.h  version.txt
FSpring(windows)/FSpring/res/: FSpring.rc2  image.ai  video.ai
